--- a/Project_Code/style.css
+++ b/Project_Code/style.css
@@ -212,3 +212,116 @@ height: 100%;
     background-color: #ffffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
+
+.cmpHistory{
+    margin-top:20px;
+    height:100%;
+    width:100%;
+    display: flex;
+}
+
+.mission{
+margin-top:80px;
+/* margin-left: 50px; */
+padding-left: 0px;
+width:800px;
+height:500px;
+background-color: #ffffff;
+/* box-shadow:0 0 20px #653f3f; */
+}
+
+#eye-photo{
+margin-top: 50px;
+margin-left:160px;
+width:120px;
+height: 50px;
+}
+
+#first-mission{
+margin-top: 80px;
+margin-left:30px;
+ margin-right: 30px;
+font-size: 20px;
+font-family: 'Times New Roman';
+font-style: normal;
+text-align: justify;
+}
+
+.history{
+    margin-top:80px;
+    /* margin-left: 250px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #efe9e2;
+    /* box-shadow:0 0 20px #946666; */
+    }
+
+
+    #diamond-photo{
+        margin-top: 30px;
+        margin-left:170px;
+        width:120px;
+        height: 50px;
+        background-color: #efe9e2;
+        }
+        
+        #first-history{
+        margin-top: 80px;
+        margin-left:30px;
+        margin-right: 30px;
+        font-size: 20px;
+        font-family: 'Times New Roman';
+        font-style: normal;
+        background-color: #efe9e2;
+        text-align: justify;
+        }
+
+
+    .Personalization{
+        margin-top:80px;
+        /* margin-left: 400px; */
+        padding-left: 0px;
+        width:800px;
+        height:500px;
+        background-color: #e4dbcc;
+       /* box-shadow: 0 0 20px #946666; */
+        }
+
+        #person-photo{
+            margin-top: 30px;
+            margin-left:170px;
+            width:120px;
+            height: 50px;
+            background-color: #e4dbcc;
+            }
+            
+            #first-personalization{
+            margin-top: 80px;
+            margin-left:35px;
+            margin-right: 35px;
+            font-size: 20px;
+            font-family: 'Times New Roman';
+            font-style: normal;
+            text-align: justify;
+            background-color: #e4dbcc;
+            }
+
+.Cart{
+    border-radius: 100%;
+    width:70px;
+    height: 70px;
+    position: fixed;
+    top:600px;
+    left:1370px;
+
+    border-color: black;
+}
+
+#cart{
+    width:50px;
+    height: 50px;
+    margin-top: 8px;
+    margin-left: 8px;
+    background-color: transparent;
+}
