--- a/WEB_PROJECT1/style.css
+++ b/WEB_PROJECT1/style.css
@@ -1,19 +1,18 @@
 :root {
     --primary-color: #ffffff;
-  }
+}
   
-  * {
+* {
     margin: 0;
     padding: 0;
     background-color: var(--primary-color);
-
-  }
+}
 .main{
-width:100%;
-background: linear-gradient(to top, rgba(255, 255, 255, 0.5)50%,rgba(255, 255, 255, 0.5)50%),url("opop.jpg");
-background-position:center;
-background-size: cover;
-height: 100%;
+    width:100%;
+    background: linear-gradient(to top, rgba(255, 255, 255, 0.5)50%,rgba(255, 255, 255, 0.5)50%),url("opop.jpg");
+    background-position:center;
+    background-size: cover;
+    height: 100%;
 }
 
 .navbar{
@@ -23,118 +22,118 @@ height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    }
-    
-    .logo{
+}
+
+.logo{
     display: flex;
     align-items: center;
     padding-top: 20px; 
-    }
-    
-    #logo1{
+}
+
+#logo1{
     width: 60px;
     height: 60px;
     margin-left: 50px;
-    }
-    
-    #nameofshop{
+}
+
+#nameofshop{
     font-size: 20px;
     font-family: sans-serif;
     color: #ccafaf;
     margin-left: 5px;
-    }
-    
-    .menu{
+}
+
+.menu{
     width: 800px;
     height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-top: 20px; 
-    }
-    
-    ul{
+}
+
+ul{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
     padding: 0;
-    }
-    
-    ul li{
+}
+
+ul li{
     list-style:none;
     margin-right: 60px; /*This is a defect*/
-     
+        
     margin-left: 50px;
-    }
-    
-    ul li a{
+}
+
+ul li a{
     text-decoration: none;
     color:rgb(207, 190, 183);
     font-family: Arial, Helvetica, sans-serif;
     font-weight:bold;
     transition: 0.4s ease-in-out;
-    }
-    
-    ul li a:hover{
-    color:rgb(137, 188, 202);
-    }
-    
-    .reg{
-        display: flex;
-        align-items: center;
-        padding-top: 20px;
-        margin-right: 20px; /* Updated margin */
-    }
-    
-    #find{
-        width: 30px;
-        height: 30px;
-        margin-right: 20px; /* Updated margin */
-        border-radius: 100px;
-    }
-    
-    #searchBar {
-        width: 150px;
-        height: 30px;
-        display: inline-block;
-        margin-right: 20px; /* Updated margin */
-        padding: 5px; /* Added padding */
-        border: 1px solid #ccc; /* Added border */
-        border-radius: 4px; /* Added border radius */
-    }
-    
-    #register {
-        margin-right: 20px;
-        margin-left: 20px;
-        width: 100px;
-        height: 35px;
-        border: 1px solid #ccc;
-        transition: 0.6s ease-in-out;
-    }
-    
-    #login {
-        margin-left: 8px;
-        width: 100px;
-        height: 35px;
-        border: 1px solid #ccc;
-        transition: 0.6s ease-in-out;
-    }
-    
-    #register:hover{
-        background-color: rgb(216, 195, 169);
-        cursor:pointer;
-    }
-    #login:hover{
-        background-color: rgb(216, 195, 169);
-        cursor:pointer;
-    }
-    
-    #find:hover{
-        background-color: rgb(227, 212, 194);
-        cursor:pointer;
-    }
-    
+}
+
+ul li a:hover{
+color:rgb(137, 188, 202);
+}
+
+.reg{
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    margin-right: 20px; /* Updated margin */
+}
+
+#find{
+    width: 30px;
+    height: 30px;
+    margin-right: 20px; /* Updated margin */
+    border-radius: 100px;
+}
+
+#searchBar {
+    width: 150px;
+    height: 30px;
+    display: inline-block;
+    margin-right: 20px; /* Updated margin */
+    padding: 5px; /* Added padding */
+    border: 1px solid #ccc; /* Added border */
+    border-radius: 4px; /* Added border radius */
+}
+
+#register {
+    margin-right: 20px;
+    margin-left: 20px;
+    width: 100px;
+    height: 35px;
+    border: 1px solid #ccc;
+    transition: 0.6s ease-in-out;
+}
+
+#login {
+    margin-left: 8px;
+    width: 100px;
+    height: 35px;
+    border: 1px solid #ccc;
+    transition: 0.6s ease-in-out;
+}
+
+#register:hover{
+    background-color: rgb(216, 195, 169);
+    cursor:pointer;
+}
+#login:hover{
+    background-color: rgb(216, 195, 169);
+    cursor:pointer;
+}
+
+#find:hover{
+    background-color: rgb(227, 212, 194);
+    cursor:pointer;
+}
+
 
 .container{
     position: relative;
@@ -152,23 +151,22 @@ height: 100%;
 
 
 #read-more{
-  position: absolute;
-  top:50% ;
-  left:700px;
-  border-radius: 50px;
-  width: 110px;
-  height:40px;
-  color: rgb(13, 47, 43);
-  border: none;
-  text-align: center;
-  text-decoration-color: black;
-  display: inline-block;
-  font-size: 18px;
-  font-family: 'Times New Roman';
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.5s ease-in-out;
-  
+    position: absolute;
+    top:50% ;
+    left:700px;
+    border-radius: 50px;
+    width: 110px;
+    height:40px;
+    color: rgb(13, 47, 43);
+    border: none;
+    text-align: center;
+    text-decoration-color: black;
+    display: inline-block;
+    font-size: 18px;
+    font-family: 'Times New Roman';
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
 }
 
 #read-more:hover{
@@ -221,30 +219,30 @@ height: 100%;
 }
 
 .mission{
-margin-top:80px;
-/* margin-left: 50px; */
-padding-left: 0px;
-width:800px;
-height:500px;
-background-color: #ffffff;
-/* box-shadow:0 0 20px #653f3f; */
+    margin-top:80px;
+    /* margin-left: 50px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #ffffff;
+    /* box-shadow:0 0 20px #653f3f; */
 }
 
 #eye-photo{
-margin-top: 50px;
-margin-left:160px;
-width:120px;
-height: 50px;
+    margin-top: 50px;
+    margin-left:160px;
+    width:120px;
+    height: 50px;
 }
 
 #first-mission{
-margin-top: 80px;
-margin-left:30px;
- margin-right: 30px;
-font-size: 20px;
-font-family: 'Times New Roman';
-font-style: normal;
-text-align: justify;
+    margin-top: 80px;
+    margin-left:30px;
+    margin-right: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    text-align: justify;
 }
 
 .history{
@@ -255,57 +253,57 @@ text-align: justify;
     height:500px;
     background-color: #efe9e2;
     /* box-shadow:0 0 20px #946666; */
-    }
+}
 
 
-    #diamond-photo{
-        margin-top: 30px;
-        margin-left:170px;
-        width:120px;
-        height: 50px;
-        background-color: #efe9e2;
-        }
-        
-        #first-history{
-        margin-top: 80px;
-        margin-left:30px;
-        margin-right: 30px;
-        font-size: 20px;
-        font-family: 'Times New Roman';
-        font-style: normal;
-        background-color: #efe9e2;
-        text-align: justify;
-        }
+#diamond-photo{
+    margin-top: 30px;
+    margin-left:170px;
+    width:120px;
+    height: 50px;
+    background-color: #efe9e2;
+}
+    
+#first-history{
+    margin-top: 80px;
+    margin-left:30px;
+    margin-right: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    background-color: #efe9e2;
+    text-align: justify;
+}
 
 
-    .Personalization{
-        margin-top:80px;
-        /* margin-left: 400px; */
-        padding-left: 0px;
-        width:800px;
-        height:500px;
-        background-color: #e4dbcc;
-       /* box-shadow: 0 0 20px #946666; */
-        }
+.Personalization{
+    margin-top:80px;
+    /* margin-left: 400px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #e4dbcc;
+    /* box-shadow: 0 0 20px #946666; */
+}
 
-        #person-photo{
-            margin-top: 30px;
-            margin-left:170px;
-            width:120px;
-            height: 50px;
-            background-color: #e4dbcc;
-            }
-            
-            #first-personalization{
-            margin-top: 80px;
-            margin-left:35px;
-            margin-right: 35px;
-            font-size: 20px;
-            font-family: 'Times New Roman';
-            font-style: normal;
-            text-align: justify;
-            background-color: #e4dbcc;
-            }
+#person-photo{
+    margin-top: 30px;
+    margin-left:170px;
+    width:120px;
+    height: 50px;
+    background-color: #e4dbcc;
+}
+
+#first-personalization{
+    margin-top: 80px;
+    margin-left:35px;
+    margin-right: 35px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    text-align: justify;
+    background-color: #e4dbcc;
+}
 
 .Cart{
     border-radius: 100%;
@@ -324,4 +322,22 @@ text-align: justify;
     margin-top: 8px;
     margin-left: 8px;
     background-color: transparent;
+}
+
+.DelPrices{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+}
+
+.DelMethods{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+}
+
+.ShowTable{
+    border: red 20px;
 }
