--- a/WEB_PROJECT1/STYLE/loginstyle.css
+++ b/WEB_PROJECT1/STYLE/loginstyle.css
@@ -15,10 +15,10 @@ body {
 .container {
     position: relative;
     width: 70vw;
-    height: 80vh;
+    height: 95vh;
     background: #fff;
     border-radius: 15px;
-    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 20px 0 rgba(225, 215, 215, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
 .container::before {
@@ -28,7 +28,7 @@ body {
     left: -50%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(-45deg, #df4adf, #520852);
+    background: linear-gradient(-45deg, #c5a978, #998c59);
     z-index: 6;
     transform: translateX(100%);
     transition: 1s ease-in-out;
@@ -65,15 +65,15 @@ form.sign-up-form {
 }
 .title {
     font-size: 35px;
-    color: #df4adf;
+    color: #33280a;
     margin-bottom: 10px;
 }
 .input-field {
     width: 100%;
-    height: 50px;
+    height: 70px;
     background: #f0f0f0;
     margin: 10px 0;
-    border: 2px solid #df4adf;
+    border: 2px solid #33280a;
     border-radius: 50px;
     display: flex;
     align-items: center;
@@ -101,7 +101,7 @@ form.sign-up-form {
     height: 50px;
     border: none;
     border-radius: 50px;
-    background: #df4adf;
+    background: #754b0c;
     color: #fff;
     font-weight: 600;
     margin: 10px 0;
@@ -109,7 +109,7 @@ form.sign-up-form {
     cursor: pointer;
 }
 .btn:hover {
-    background: #c03cc0;
+    background: #4f3708;
 }
 .social-text {
     margin: 10px 0;
@@ -134,8 +134,8 @@ a {
     text-decoration: none;
 }
 .social-icon:hover {
-    color: #df4adf;
-    border-color: #df4adf;
+    color: #7a1a1a;
+    border-color: #5a1010;
 }
 .panels-container {
     position: absolute;
@@ -252,3 +252,12 @@ a {
         width: 90%;
     }
 }
+
+
+ 
+
+.hidden {
+    display: none;
+}
+
+ 
