--- a/WEB_PROJECT1/STYLE/loginstyle.css
+++ b/WEB_PROJECT1/STYLE/loginstyle.css
@@ -64,15 +64,16 @@ form.sign-up-form {
     transition-delay: 1s;
 }
 .title {
-    font-size: 35px;
+    font-size: 30px;
     color: #33280a;
-    margin-bottom: 10px;
+    margin-top: 35px; /* Increase the margin-top value to lower the title */
+ /* Increase the margin-bottom value for spacing */
 }
 .input-field {
     width: 100%;
     height: 70px;
+    margin-top: 30px;
     background: #f0f0f0;
-    margin: 10px 0;
     border: 2px solid #33280a;
     border-radius: 50px;
     display: flex;
@@ -104,7 +105,7 @@ form.sign-up-form {
     background: #754b0c;
     color: #fff;
     font-weight: 600;
-    margin: 10px 0;
+    margin-bottom: 20px ;
     text-transform: uppercase;
     cursor: pointer;
 }
@@ -128,7 +129,7 @@ form.sign-up-form {
     color: #444;
     border: 1px solid #444;
     border-radius: 50px;
-    margin: 0 5px;
+    margin: 30px 5px;
 }
 a {
     text-decoration: none;
