--- a/WEB_PROJECT1/CLIENT/client-view.css
+++ b/WEB_PROJECT1/CLIENT/client-view.css
@@ -1,140 +1,140 @@
     .products {
-        width: 750px;
-        height: 423px;
-        margin: 80px;
-        background: #FFFFFF;
-        box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
-        border-radius: 6px;
-       
-        display: flex;
-        flex-direction: column;
-      }
+      width: 750px;
+      height: 423px;
+      margin: 80px;
+      background: #444;
+      box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
+      border-radius: 6px;
+      display: flex;
+      flex-direction: column;
+    }
+.buttons {
+  position: relative;
+  padding-top: 30px;
+  margin-right: 60px;
+}
 
-      .buttons {
-        position: relative;
-        padding-top: 30px;
-        margin-right: 60px;
-      }
-      .delete-btn,
-      .like-btn {
-        display: inline-block;
-        Cursor: pointer;
-      }
-      .delete-btn {
-        width: 18px;
-        height: 17px;
-      }
-       
-      .like-btn {
-        position: absolute;
-        top: 9px;
-        left: 15px;
-        width: 60px;
-        height: 60px;
-        background-size: 2900%;
-        background-repeat: no-repeat;
-      }
+.delete-btn,
+.like-btn {
+  display: inline-block;
+  cursor: pointer;
+}
 
-      .is-active {
-        animation-name: animate;
-        animation-duration: .8s;
-        animation-iteration-count: 1;
-        animation-timing-function: steps(28);
-        animation-fill-mode: forwards;
-      }
-       
-      @keyframes animate {
-        0%   { background-position: left;  }
-        50%  { background-position: right; }
-        100% { background-position: right; }
-      }
-      
-      .image {
-        margin-right: 50px;
-      }
-  
-      .description {
-        padding-top: 10px;
-        margin-right: 60px;
-        width: 115px;
-      }
-       
-      .description span {
-        display: block;
-        font-size: 15px;
-        color: #43484D;
-        font-weight: 400;
-      }
-       
+.delete-btn {
+  width: 18px;
+  height: 17px;
+}
 
-    
-       
-      button:focus,
-      input:focus {
-        outline:0;
-      }
+.like-btn {
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  width: 60px;
+  height: 60px;
+  background-size: 2900%;
+  background-repeat: no-repeat;
+}
 
-      .total-price {
-        width: 83px;
-        padding-top: 27px;
-        margin-left: -20px;
-        text-align: center;
-        font-size: 14px;
-        color: #43484D;
-        font-weight: 300;
-      }
-      @media (max-width: 800px) {
-        .shopping-cart {
-          width: 100%;
-          height: auto;
-          overflow: hidden;
-        }
-        .item {
-          height: auto;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
-        .image img {
-          width: 50%;
-        }
-        .image,
-        .quantity,
-        .description {
-          width: 100%;
-          text-align: center;
-          margin: 6px 0;
-        }
-        .buttons {
-          margin-right: 20px;
-        }
-      }
+.is-active {
+  animation-name: animate;
+  animation-duration: .8s;
+  animation-iteration-count: 1;
+  animation-timing-function: steps(28);
+  animation-fill-mode: forwards;
+}
 
-      span {cursor:pointer; }
-      .number{
-          margin: 5px;
-      }
-      .minus, .plus{
-          width:20px;
-          height:20px;
-          background:#f2f2f2;
-          border-radius:4px;
-          padding:8px 5px 8px 5px;
-          border:1px solid #ddd;
-    display: inline-block;
-    vertical-align: middle;
+@keyframes animate {
+  0%   { background-position: left;  }
+  50%  { background-position: right; }
+  100% { background-position: right; }
+}
+
+.image {
+  margin-right: 50px;
+}
+
+.description {
+  padding-top: 10px;
+  margin-right: 60px;
+  width: 115px;
+}
+
+.description span {
+  display: block;
+  font-size: 15px;
+  color: #43484D;
+  font-weight: 400;
+}
+
+button:focus,
+input:focus {
+  outline: 0;
+}
+
+.total-price {
+  width: 83px;
+  padding-top: 27px;
+  margin-left: -20px;
+  text-align: center;
+  font-size: 14px;
+  color: #43484D;
+  font-weight: 300;
+}
+
+@media (max-width: 800px) {
+  .shopping-cart {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  .item {
+    height: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .image img {
+    width: 50%;
+  }
+  .image,
+  .quantity,
+  .description {
+    width: 100%;
     text-align: center;
-      }
+    margin: 6px 0;
+  }
+  .buttons {
+    margin-right: 20px;
+  }
+}
 
-      input{
-          height:34px;
-    width: 100px;
-    text-align: center;
-    font-size: 26px;
-          border:1px solid #ddd;
-          border-radius:4px;
-    display: inline-block;
-    vertical-align: middle;
-          
-      }
-  
-  
+span {
+  cursor: pointer;
+}
+
+.number {
+  margin: 5px;
+}
+
+.minus,
+.plus {
+  width: 20px;
+  height: 20px;
+  background: #f2f2f2;
+  border-radius: 4px;
+  padding: 8px 5px 8px 5px;
+  border: 1px solid #ddd;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+}
+
+input {
+  height: 34px;
+  width: 100px;
+  text-align: center;
+  font-size: 26px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  display: inline-block;
+  vertical-align: middle;
+}
