--- a/WEB_PROJECT1/CLIENT/client-view.css
+++ b/WEB_PROJECT1/CLIENT/client-view.css
@@ -2,12 +2,12 @@
   width: 750px;
   height: 423px;
   margin: 80px;
-  background: #444;
+  background: #ccafaf;
   box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10);
   border-radius: 6px;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to bottom, #444, #555);
+  background-image: linear-gradient(to bottom, lightyellow, #555);
 }
 
 .buttons {
