--- a/WEB_PROJECT1/CLIENT/client-view.css
+++ b/WEB_PROJECT1/CLIENT/client-view.css
@@ -108,6 +108,8 @@ input:focus {
   }
   .image img {
     width: 50%;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   }
   .image,
   .quantity,
@@ -145,6 +147,7 @@ span:hover {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
+  cursor: pointer;
 }
 
 input {
