--- a/WEB_PROJECT1/HOME/style.css
+++ b/WEB_PROJECT1/HOME/style.css
@@ -345,3 +345,18 @@ color:rgb(137, 188, 202);
   background-color: #222;
   color: #fff;
 }
+body {
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+.dark-mode {
+  --text-color: #fff;
+  --background-color: #222;
+}
+
+/* Light mode */
+.light-mode {
+  --text-color: #000;
+  --background-color: #fff;
+}
