--- a/WEB_PROJECT1/HOME/style.css
+++ b/WEB_PROJECT1/HOME/style.css
@@ -1,11 +1,353 @@
 :root {
-  --primary-color: #ffffff;
+    --primary-color: #ffffff;
+}
+  
+* {
+    margin: 0;
+    padding: 0;
+    background-color: var(--primary-color);
+}
+.main{
+    width:100%;
+    background: linear-gradient(to top, rgba(255, 255, 255, 0.5)50%,rgba(255, 255, 255, 0.5)50%),url("opop.jpg");
+    background-position:center;
+    background-size: cover;
+    height: 100%;
 }
 
+.navbar{
+    width: 100%;
+    height: 75px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    padding-top: 20px; 
+}
+
+#logo1{
+    width: 60px;
+    height: 60px;
+    margin-left: 50px;
+}
+
+#nameofshop{
+    font-size: 20px;
+    font-family: sans-serif;
+    color: #ccafaf;
+    margin-left: 5px;
+}
+
+.menu{
+    width: 800px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px; 
+}
+
+ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+ul li{
+    list-style:none;
+    margin-right: 60px; /*This is a defect*/
+        
+    margin-left: 50px;
+}
+
+ul li a{
+    text-decoration: none;
+    color:rgb(207, 190, 183);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    transition: 0.4s ease-in-out;
+}
+
+ul li a:hover{
+color:rgb(137, 188, 202);
+}
+
+.reg{
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    margin-right: 20px; /* Updated margin */
+}
+
+#find{
+    width: 30px;
+    height: 30px;
+    margin-right: 20px; /* Updated margin */
+    border-radius: 100px;
+}
+
+#searchBar {
+    width: 150px;
+    height: 30px;
+    display: inline-block;
+    margin-right: 20px; /* Updated margin */
+    padding: 5px; /* Added padding */
+    border: 1px solid #ccc; /* Added border */
+    border-radius: 4px; /* Added border radius */
+}
+
+#register {
+    margin-right: 20px;
+    margin-left: 20px;
+    width: 100px;
+    height: 35px;
+    border: 1px solid #ccc;
+    transition: 0.6s ease-in-out;
+}
+
+#login {
+    margin-left: 8px;
+    width: 100px;
+    height: 35px;
+    border: 1px solid #ccc;
+    transition: 0.6s ease-in-out;
+}
+
+#register:hover{
+    background-color: rgb(216, 195, 169);
+    cursor:pointer;
+}
+#login:hover{
+    background-color: rgb(216, 195, 169);
+    cursor:pointer;
+}
+
+#find:hover{
+    background-color: rgb(227, 212, 194);
+    cursor:pointer;
+}
+
+
+.container{
+    position: relative;
+    margin-top:40px;
+    width:100%;
+    height: 100%;
+
+}
+
+.Veggies{
+    align-self: center;
+    width: 100%;
+    background-color: #e3ded0; 
+}
+
+
+#read-more{
+    position: absolute;
+    top:50% ;
+    left:700px;
+    border-radius: 50px;
+    width: 110px;
+    height:40px;
+    color: rgb(13, 47, 43);
+    border: none;
+    text-align: center;
+    text-decoration-color: black;
+    display: inline-block;
+    font-size: 18px;
+    font-family: 'Times New Roman';
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+#read-more:hover{
+    background-color: #946666;
+    cursor:pointer;
+}
+
+.experience-info{
+    width:100%;
+    height:100%;
+    display:flex;
+}
+
+._1ex-inf{
+    margin-top: 150px;
+    margin-left:130px;
+    width:200px;
+    height:200px;
+    border-radius: 100px;
+    background-color: #ffffff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    
+}
+
+._2ex-inf{
+    margin-top: 150px;
+    margin-left:300px;
+    width:200px;
+    height:200px;
+    border-radius: 100px;
+    background-color: #ffffff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+._3ex-inf{
+    margin-top: 150px;
+    margin-left:370px;
+    width:200px;
+    height:200px;
+    border-radius: 100px;
+    background-color: #ffffff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.cmpHistory{
+    margin-top:20px;
+    height:100%;
+    width:100%;
+    display: flex;
+}
+
+.mission{
+    margin-top:80px;
+    /* margin-left: 50px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #ffffff;
+    /* box-shadow:0 0 20px #653f3f; */
+}
+
+#eye-photo{
+    margin-top: 50px;
+    margin-left:160px;
+    width:120px;
+    height: 50px;
+}
+
+#first-mission{
+    margin-top: 80px;
+    margin-left:30px;
+    margin-right: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    text-align: justify;
+}
+
+.history{
+    margin-top:80px;
+    /* margin-left: 250px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #efe9e2;
+    /* box-shadow:0 0 20px #946666; */
+}
+
+
+#diamond-photo{
+    margin-top: 30px;
+    margin-left:170px;
+    width:120px;
+    height: 50px;
+    background-color: #efe9e2;
+}
+    
+#first-history{
+    margin-top: 80px;
+    margin-left:30px;
+    margin-right: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    background-color: #efe9e2;
+    text-align: justify;
+}
+
+
+.Personalization{
+    margin-top:80px;
+    /* margin-left: 400px; */
+    padding-left: 0px;
+    width:800px;
+    height:500px;
+    background-color: #e4dbcc;
+    /* box-shadow: 0 0 20px #946666; */
+}
+
+#person-photo{
+    margin-top: 30px;
+    margin-left:170px;
+    width:120px;
+    height: 50px;
+    background-color: #e4dbcc;
+}
+
+#first-personalization{
+    margin-top: 80px;
+    margin-left:35px;
+    margin-right: 35px;
+    font-size: 20px;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    text-align: justify;
+    background-color: #e4dbcc;
+}
+
+.Cart{
+    border-radius: 100%;
+    width:70px;
+    height: 70px;
+    position: fixed;
+    top:600px;
+    left:1370px;
+
+    border-color: black;
+}
+
+#cart{
+    width:50px;
+    height: 50px;
+    margin-top: 8px;
+    margin-left: 8px;
+    background-color: transparent;
+}
+
+.DelPrices{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+}
+
+.DelMethods{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+}
+
+.ShowTable{
+    border: red 20px;
+}
+.dark-mode {
+  background-color: #222;
+  color: #fff;
+}
 body {
   color: var(--text-color);
   background-color: var(--background-color);
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode {
@@ -13,412 +355,8 @@ body {
   --background-color: #222;
 }
 
+/* Light mode */
 .light-mode {
   --text-color: #000;
   --background-color: #fff;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  background-color: var(--primary-color);
-}
-
-.main {
-  width: 100%;
-  background: linear-gradient(
-      to top,
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 0.5) 50%
-    ),
-    url("opop.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 100%;
-}
-
-.navbar {
-  width: 100%;
-  height: 75px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  padding-top: 20px;
-}
-
-#logo1 {
-  width: 60px;
-  height: 60px;
-  margin-left: 50px;
-}
-
-#nameofshop {
-  font-size: 20px;
-  font-family: sans-serif;
-  color: #ccafaf;
-  margin-left: 5px;
-}
-
-.menu {
-  width: 800px;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 20px;
-}
-
-ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-ul li {
-  list-style: none;
-  margin-right: 60px;
-  margin-left: 50px;
-}
-
-ul li a {
-  text-decoration: none;
-  color: rgb(207, 190, 183);
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  transition: 0.4s ease-in-out;
-}
-
-ul li a:hover {
-  color: rgb(137, 188, 202);
-}
-
-.reg {
-  display: flex;
-  align-items: center;
-  padding-top: 20px;
-  margin-right: 20px;
-}
-
-#find {
-  width: 30px;
-  height: 30px;
-  margin-right: 20px;
-  border-radius: 100px;
-}
-
-#searchBar {
-  width: 150px;
-  height: 30px;
-  display: inline-block;
-  margin-right: 20px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-#register {
-  margin-right: 20px;
-  margin-left: 20px;
-  width: 100px;
-  height: 35px;
-  border: 1px solid #ccc;
-  transition: 0.6s ease-in-out;
-}
-
-#login {
-  margin-left: 8px;
-  width: 100px;
-  height: 35px;
-  border: 1px solid #ccc;
-  transition: 0.6s ease-in-out;
-}
-
-#register:hover {
-  background-color: rgb(216, 195, 169);
-  cursor: pointer;
-}
-
-#login:hover {
-  background-color: rgb(216, 195, 169);
-  cursor: pointer;
-}
-
-#find:hover {
-  background-color: rgb(227, 212, 194);
-  cursor: pointer;
-}
-
-.container {
-  position: relative;
-  margin-top: 40px;
-  width: 100%;
-  height: 100%;
-}
-
-.Veggies {
-  align-self: center;
-  width: 100%;
-  background-color: #e3ded0;
-}
-
-#read-more {
-  position: absolute;
-  top: 50%;
-  left: 700px;
-  border-radius: 50px;
-  width: 110px;
-  height: 40px;
-  color: rgb(13, 47, 43);
-  border: none;
-  text-align: center;
-  text-decoration-color: black;
-  display: inline-block;
-  font-size: 18px;
-  font-family: 'Times New Roman';
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.5s ease-in-out;
-}
-
-#read-more:hover {
-  background-color: #946666;
-  cursor: pointer;
-}
-
-.experience-info {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-
-._1ex-inf {
-  margin-top: 150px;
-  margin-left: 130px;
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  background-color: #ffffff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-._2ex-inf {
-  margin-top: 150px;
-  margin-left: 300px;
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  background-color: #ffffff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-._3ex-inf {
-  margin-top: 150px;
-  margin-left: 370px;
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  background-color: #ffffff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.cmpHistory {
-  margin-top: 20px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-}
-
-.mission {
-  margin-top: 80px;
-  padding-left: 0px;
-  width: 800px;
-  height: 500px;
-  background-color: #ffffff;
-}
-
-#eye-photo {
-  margin-top: 50px;
-  margin-left: 160px;
-  width: 120px;
-  height: 50px;
-}
-
-#first-mission {
-  margin-top: 80px;
-  margin-left: 30px;
-  margin-right: 30px;
-  font-size: 20px;
-  font-family: 'Times New Roman';
-  font-style: normal;
-  text-align: justify;
-}
-
-.history {
-  margin-top: 80px;
-  padding-left: 0px;
-  width: 800px;
-  height: 500px;
-  background-color: #efe9e2;
-}
-
-#diamond-photo {
-  margin-top: 30px;
-  margin-left: 170px;
-  width: 120px;
-  height: 50px;
-  background-color: #efe9e2;
-}
-
-#first-history {
-  margin-top: 80px;
-  margin-left: 30px;
-  margin-right: 30px;
-  font-size: 20px;
-  font-family: 'Times New Roman';
-  font-style: normal;
-  background-color: #efe9e2;
-  text-align: justify;
-}
-
-.Personalization {
-  margin-top: 80px;
-  padding-left: 0px;
-  width: 800px;
-  height: 500px;
-  background-color: #e4dbcc;
-}
-
-#person-photo {
-  margin-top: 30px;
-  margin-left: 170px;
-  width: 120px;
-  height: 50px;
-  background-color: #e4dbcc;
-}
-
-#first-personalization {
-  margin-top: 80px;
-  margin-left: 35px;
-  margin-right: 35px;
-  font-size: 20px;
-  font-family: 'Times New Roman';
-  font-style: normal;
-  text-align: justify;
-  background-color: #e4dbcc;
-}
-
-.Cart {
-  border-radius: 100%;
-  width: 70px;
-  height: 70px;
-  position: fixed;
-  top: 600px;
-  left: 1370px;
-  border-color: black;
-}
-
-#cart {
-  width: 50px;
-  height: 50px;
-  margin-top: 8px;
-  margin-left: 8px;
-  background-color: transparent;
-}
-
-.DelPrices {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-}
-
-.DelMethods {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-}
-
-.ShowTable {
-  border: red 20px;
-}
-
-/* Dark mode */
-body.dark-mode {
-  --primary-color: #222;
-  --text-color: #fff;
-  --background-color: #222;
-}
-
-body.dark-mode .navbar {
-  background-color: var(--primary-color);
-  color: var(--text-color);
-}
-
-body.dark-mode .logo #nameofshop {
-  color: var(--text-color);
-}
-
-body.dark-mode ul li a {
-  color: var(--text-color);
-}
-
-body.dark-mode #find,
-body.dark-mode #searchBar,
-body.dark-mode #register,
-body.dark-mode #login {
-  border-color: var(--text-color);
-}
-
-body.dark-mode #find:hover,
-body.dark-mode #searchBar:hover,
-body.dark-mode #register:hover,
-body.dark-mode #login:hover {
-  background-color: var(--text-color);
-  color: var(--background-color);
-}
-
-body.dark-mode .main {
-  background: linear-gradient(
-      to top,
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 0.5) 50%
-    ),
-    url("opop.jpg");
-}
-
-body.dark-mode ul li a:hover {
-  color: rgb(137, 188, 202);
-}
-
-body.dark-mode .experience-info ._1ex-inf,
-body.dark-mode .experience-info ._2ex-inf,
-body.dark-mode .experience-info ._3ex-inf {
-  background-color: #222;
-}
-
-body.dark-mode .mission,
-body.dark-mode .history,
-body.dark-mode .Personalization {
-  background-color: var(--background-color);
-}
-
-body.dark-mode #eye-photo,
-body.dark-mode #diamond-photo,
-body.dark-mode #person-photo {
-  background-color: var(--background-color);
-}
-
-body.dark-mode #first-mission,
-body.dark-mode #first-history,
-body.dark-mode #first-personalization {
-  background-color: var(--background-color);
 }
