--- a/WEB_PROJECT1/HOME/style.css
+++ b/WEB_PROJECT1/HOME/style.css
@@ -305,49 +305,40 @@ color:rgb(137, 188, 202);
     background-color: #e4dbcc;
 }
 
-.Cart{
-    border-radius: 100%;
-    width:70px;
-    height: 70px;
-    position: fixed;
-    top:600px;
-    left:1370px;
-
-    border-color: black;
-}
-
-#cart{
-    width:50px;
-    height: 50px;
-    margin-top: 8px;
-    margin-left: 8px;
-    background-color: transparent;
-}
-
-.DelPrices{
+.DelPrices {
     display: flex;
     flex-direction: column;
     align-items: center;
     align-self: center;
+    background-color:  rgb(220, 208, 188);
 }
 
-.DelMethods{
+.DelMethods {
     display: flex;
     flex-direction: column;
     align-items: center;
     align-self: center;
+    background-color:  rgb(220, 208, 188);}
+
+.ShowTable {
+    border: 2px solid red;
+    width: 850px;
+    margin-top: 20px;
+    border-radius: 0.5px;
+    background-color:  rgb(220, 208, 188);
 }
 
-.ShowTable{
-    border: red 20px;
+.ShowTable th,
+.ShowTable td {
+    padding: 10px;
+    text-align: center;
 }
+
 body {
-  color: var(--text-color);
-  background-color: var(--background-color);
-}
+    background-color:  rgb(220, 208, 188);
+    }
 
 /* Light mode */
 .light-mode {
-  --text-color: #000;
-  --background-color: #fff;
-}
+    --text-color: #000;
+    --background-color: #fff;}
